src/master.css
* {
	margin: 0;
	padding: 0;
}

body {
	font-family: Helvetica, Arial, Verdana, sans-serif;
	font-size: 100%;
	color: #333;
	margin: 1em;
}

img {
	vertical-align: middle;
}

h1 {
	margin-bottom: .3em;
	padding-left: 8px;
	padding-right: 8px;
	font-size: 4.6em;
	line-height: .95em;
}

h2 {
	margin-bottom: 2.5em;
	padding-left: 8px;
	padding-right: 8px;
	font-size: 3em;
	line-height: 1.3;
}

h3 {
	margin-bottom: 1.5em;
	padding-left: 8px;
	padding-right: 8px;
}

h4 {
	margin-bottom: .8em;
	font-size: 1.3em;
	line-height: 1.6;
}

h5 {
	margin-bottom: 1em;
	padding-left: 8px;
	padding-right: 8px;	
	font-size: 1.2em;
	line-height: 1.6;
}

p {
	margin-bottom: 1em !important; 
	padding-left: 8px;
	padding-right: 8px;
	font-size: 100%;
	line-height: 120%;
}

a {
	text-decoration: none;
	font-weight: bold;
	color: #000;
}

a:hover {
	color: #0F83DB;
}

acronym {
	border-bottom: 1px dotted #eee;
}

kbd {
	font-family: "Monaco", "Courier New", fixed;
	font-size: 1em;
	text-transform: uppercase;
}

input {
	width: 93%;
	padding: .4em;
	font-family: Helvetica, Arial, Verdana, sans-serif;
	font-size: 1.2em;
}

#wrapper {
	margin: 0 auto;
	margin-top: 4em;
}

#header {
	margin: 0 0 1.2em 0;
	padding: 2.5em 0;
	border-bottom: 1px solid #111;
	border-top: 1px solid #111;
	color: #111;
}

#pages {
	margin: 0 0 .5em 0;
	padding: 0 8px;
	overflow: hidden;
}

#pages ul {
	list-style-type: none;
}

#pages li {
	margin: 0 2.4em 0 0;
	font-size: 1.4em;
	line-height: 1.65;
	float: left;
}

#content {
	clear: both;
	overflow: hidden;
}

span.amp {
	font-family: Baskerville, Georgia, "Times New Roman", sans-serif;
	font-style: italic;
	font-weight: normal;
	text-transform: lowercase;
	color: #999;
}

span.by {
	font-family: "Palatino", Georgia, "Times New Roman", serif;
	font-style: italic;
	text-transform: lowercase;
	color: #999;
}

img.centered {
	display: block;
	margin: 0 auto;
	margin-bottom: 1em;
}

img.full-width {
	display: block;
	margin-left: -18.4em;
	margin-bottom: 2em;
}

